# elastic-etl

./: .gitignore  Makefile  README.md  pyproject.toml
client/: route_guide_client.py
client/creds/: credentials.py
scripts/: build-proto.sh
src/: server.py  test_utils.py
src/creds/: credentials.py
src/proto/: route_guide_pb2.py  route_guide_pb2_grpc.py
src/store/: route_guide_resources.py
src/utils/: file.py
